# Wooden-Clock

./: .gitignore  .gitmodules  LICENSE  README.md
Software/STM/: .clang-tidy  .cmake-format.py  .gitignore  CMakeLists.txt  main.cpp
Software/STM/.devcontainer/: Dockerfile  devcontainer.json
Software/STM/APP/: APP.cpp  DataContainer.cpp  DataContainer.hpp
Software/STM/APP/Assets/Images/: 1.cpp  10.cpp  19.cpp  2.cpp  3.cpp  4.cpp  5.cpp  Arrows1.cpp  Arrows2.cpp  Images.hpp  leftArrow.cpp  rightArrow.cpp  upArrow.cpp
Software/STM/APP/Assets/Text/: eight.cpp  hour_13_57.cpp  texts.h  two.cpp  zero.cpp
Software/STM/APP/Screens/: Hour.hpp  StateAccel.hpp  StateArrows.hpp  StateHourglass.hpp  StateNorth.hpp
Software/STM/BSP/Display/: Display.cpp
Software/STM/BSP/Magnetometer/: Magnetometer.hpp
Software/STM/DRV/BME280/: BME280.hpp
Software/STM/DRV/LSM9DS1/: LSM9DS1.cpp  LSM9DS1.hpp
Software/STM/DRV/TLC59208F/: TLC59208F.hpp
Software/STM/HAL/: HAL.cpp  HAL.hpp  InterruptServiceRoutine.cpp
Software/STM/HAL/Clock/: Clock.hpp
Software/STM/HAL/DMA/: DMA.hpp  DMA_types.hpp
Software/STM/HAL/GPIO/: GPIO_types.hpp
Software/STM/HAL/I2C/: I2C.hpp  I2C_types.hpp
Software/STM/HAL/RTC/: RTC.hpp
Software/STM/HAL/Register/: Register.hpp
Software/STM/LIB/CMSIS/: CMakeLists.txt
Software/STM/LIB/EmbedGUI/: GUI.cpp  Widget.hpp
Software/STM/LIB/EmbedGUI/widgets/: Animation.hpp  Image.hpp  Text.hpp
Software/STM/LIB/FreeRTOS/: CMakeLists.txt
Software/STM/MCU/: CMakeLists.txt  STM32L452RETx_FLASH.ld  SystemInit.c  startup_stm32l452xx.s
Software/STM/ci/: run_clang_tidy.sh
Software/STM/config/: wooden-clock.jflash
Software/STM/config/Text2CArray/: texts.yaml
Software/STM/config/cmake/toolchain_files/: stm32l452xx.cmake  x86_clang.cmake  x86_gcc.cmake
Software/STM/config/doxygen/: Doxyfile
Software/STM/config/eclipse/: .project
Software/STM/config/py_buildsystem/: G++_ARM_Config.yaml
Software/STM/lib/: CMakeLists.txt
Software/STM/lib/BME280_API/: CMakeLists.txt
Software/STM/lib/CMSIS/: CMakeLists.txt
Software/STM/lib/EmbedGUI/: CMakeLists.txt  Canvas.hpp  GUI.cpp  GUI.hpp  LICENSE  README.md  Widget.hpp
Software/STM/lib/EmbedGUI/widgets/: Animation.hpp  Image.hpp
Software/STM/lib/FreeRTOS/: CMakeLists.txt  FreeRTOSConfig.h
Software/STM/src/: CMakeLists.txt
Software/STM/src/APP/: APP.cpp  APP.hpp  CMakeLists.txt  DataContainer.cpp  DataContainer.hpp
Software/STM/src/APP/Assets/: CMakeLists.txt
Software/STM/src/APP/Assets/Animations/: Animations.cpp  Animations.hpp  CMakeLists.txt
Software/STM/src/APP/Assets/Images/: 1.cpp  10.cpp  11.cpp  12.cpp  13.cpp  14.cpp  15.cpp  16.cpp  17.cpp  18.cpp  19.cpp  2.cpp  20.cpp  21.cpp  3.cpp  4.cpp  5.cpp  6.cpp  7.cpp  8.cpp  9.cpp  Arrows1.cpp  Arrows2.cpp  CMakeLists.txt  Images.cpp  Images.hpp  Mario.cpp  downArrow.cpp  downArrow.hpp  leftArrow.cpp  leftArrow.hpp  mario.hpp  rightArrow.cpp  rightArrow.hpp  upArrow.cpp  upArrow.hpp
Software/STM/src/APP/Assets/Text/: CMakeLists.txt  Minecart_8_0.hpp  Minecart_8_1.hpp  Minecart_8_2.hpp  Minecart_8_4.hpp  Minecart_8_5.hpp  Minecart_8_6.hpp  Minecart_8_8.hpp  Minecart_8_colon.hpp  Minecart_8_degree.hpp  Minecart_8_lowercase_a.hpp  Minecart_8_lowercase_e.hpp  Minecart_8_lowercase_f.hpp  Minecart_8_lowercase_g.hpp  Minecart_8_lowercase_n.hpp  Minecart_8_lowercase_r.hpp  Minecart_8_lowercase_t.hpp  Minecart_8_lowercase_u.hpp  Minecart_8_lowercase_v.hpp  Minecart_8_lowercase_x.hpp  Minecart_8_lowercase_y.hpp  Minecart_8_lowercase_z.hpp  Minecart_8_percent.hpp  Minecart_8_space.hpp  Minecart_8_uppercase_A.hpp  Minecart_8_uppercase_B.hpp  Minecart_8_uppercase_C.hpp  Minecart_8_uppercase_E.hpp  Minecart_8_uppercase_F.hpp  Minecart_8_uppercase_I.hpp  Minecart_8_uppercase_J.hpp  Minecart_8_uppercase_K.hpp  Minecart_8_uppercase_M.hpp  Minecart_8_uppercase_R.hpp  Minecart_8_uppercase_S.hpp  Minecart_8_uppercase_Y.hpp  Minecart_8_uppercase_Z.hpp  capital_C.cpp  colon.cpp  degree.cpp  (+14 more)
Software/STM/src/APP/Assets/Texts/: CMakeLists.txt  Minecart_8_3.hpp  Minecart_8_7.hpp  Minecart_8_9.hpp  Minecart_8_dot.hpp  Minecart_8_lowercase_b.hpp  Minecart_8_lowercase_c.hpp  Minecart_8_lowercase_d.hpp  Minecart_8_lowercase_h.hpp  Minecart_8_lowercase_i.hpp  Minecart_8_lowercase_j.hpp  Minecart_8_lowercase_k.hpp  Minecart_8_lowercase_l.hpp  Minecart_8_lowercase_m.hpp  Minecart_8_lowercase_o.hpp  (+19 more)
Software/STM/src/APP/Screens/: Counter.hpp  Hour.hpp  Shapes.hpp  StateAccel.hpp  StateArrows.hpp  StateButtons.hpp  StateHourglass.hpp  StateMario.hpp  StateNorth.hpp  StateSand.hpp  StateText.hpp  Temperature.hpp  Text.hpp
Software/STM/src/pc/: CMakeLists.txt  imconfig_allegro5.h  main.cpp
Software/STM/src/pc/BSP/: BSP.cpp  CMakeLists.txt
Software/STM/src/pc/OS/: CMakeLists.txt  os_abstraction.cpp  os_abstraction.hpp
Software/STM/src/stm32/: CMakeLists.txt  main.cpp
Software/STM/src/stm32/BSP/: BSP.cpp  CMakeLists.txt
Software/STM/src/stm32/DRV/: CMakeLists.txt
Software/STM/src/stm32/HAL/: CMakeLists.txt  HAL.cpp
Software/STM/src/stm32/MCU/: CMakeLists.txt  STM32L452RETx_FLASH.ld  SystemInit.c  startup_stm32l452xx.s
Software/STM/src/stm32/OS/: CMakeLists.txt  os_abstraction.cpp  os_abstraction.hpp
Software/STM/src/stm32/bootloader/: bootloader.cpp
Software/STM/tests/: CMakeLists.txt
Software/STM/tests/hil/: CMakeLists.txt  conftest.py
Software/STM/tests/hil/gpio_test/: CMakeLists.txt  gpio_test.cpp  test_gpio.py
Software/STM/tests/hil/helpers/: CMakeLists.txt  gdb_script.gdb
Software/STM/tests/hil/i2c_test/: CMakeLists.txt  i2c_test.cpp  test_i2c.py
Software/STM/tests/hil/register_test/: CMakeLists.txt  register_test.cpp  test_register.py
Software/STM/tests/hil/rtc_test/: CMakeLists.txt  rtc_test.cpp  test_rtc.py
Software/STM/tests/hil/sanity_test/: CMakeLists.txt  sanity_test.cpp  test_sanity.py
Software/STM/tests/hil/spi_test/: CMakeLists.txt  spi_test.cpp
Software/STM/tests/ut/: CMakeLists.txt
Software/STM/tests/ut/bsp/: CMakeLists.txt
Software/STM/tests/ut/hal/: CMakeLists.txt
Software/STM/tests/ut/mocks/: CMakeLists.txt
(+322 files in other folders)
