IF(NOT ((CMAKE_BUILD_TYPE STREQUAL "x86_Clang") OR (CMAKE_BUILD_TYPE STREQUAL
                                                    "x86_GCC")))

  SET(BME280_SRC_DIR ${CMAKE_CURRENT_SOURCE_DIR}/BME280_SensorAPI)

  ADD_LIBRARY(BME280_API STATIC EXCLUDE_FROM_ALL ${BME280_SRC_DIR}/bme280.c)

  TARGET_INCLUDE_DIRECTORIES(BME280_API PUBLIC ${BME280_SRC_DIR})

ENDIF()
