ADD_LIBRARY(
  APP STATIC EXCLUDE_FROM_ALL
  ${ASSETS} APP.cpp APP.hpp DataContainer.cpp DataContainer.hpp)

ADD_LIBRARY(
  OsAbstraction INTERFACE)
  
ADD_LIBRARY(
  BSP INTERFACE)

IF(CMAKE_BUILD_TYPE STREQUAL "x86_Clang" OR CMAKE_BUILD_TYPE STREQUAL "x86_GCC")
  TARGET_LINK_LIBRARIES(OsAbstraction INTERFACE PcOsAbstraction)
  TARGET_LINK_LIBRARIES(BSP INTERFACE PcBSP)
ELSE()
  TARGET_LINK_LIBRARIES(OsAbstraction INTERFACE StmOsAbstraction)
  TARGET_LINK_LIBRARIES(BSP INTERFACE StmBSP)
ENDIF()

TARGET_LINK_LIBRARIES(
  APP
  PRIVATE OsAbstraction BSP EmbedGUI)

TARGET_INCLUDE_DIRECTORIES(APP PUBLIC .)

add_subdirectory(Assets)