IF(NOT ((CMAKE_BUILD_TYPE STREQUAL "x86_Clang") OR (CMAKE_BUILD_TYPE STREQUAL
                                                    "x86_GCC")))
  ADD_EXECUTABLE(WoodenClock main.cpp)

  TARGET_LINK_LIBRARIES(WoodenClock PUBLIC APP BSP HAL MCU ISR CMSIS)

  TARGET_LINK_OPTIONS(
    WoodenClock PRIVATE
    "LINKER:--script=${CMAKE_SOURCE_DIR}/src/stm32/MCU/STM32L452RETx_FLASH.ld")
ENDIF()


ADD_SUBDIRECTORY(HAL)
ADD_SUBDIRECTORY(DRV)
ADD_SUBDIRECTORY(BSP)
ADD_SUBDIRECTORY(MCU)
ADD_SUBDIRECTORY(OS)