ADD_EXECUTABLE(
  WoodenClock
  main.cpp)

TARGET_LINK_LIBRARIES(
  WoodenClock
  PUBLIC APP
         BSP
         HAL
         MCU
         ISR
         CMSIS
         EmbedGUI)

TARGET_LINK_OPTIONS(
  WoodenClock PRIVATE
  "LINKER:--script=${CMAKE_SOURCE_DIR}/src/stm32/MCU/STM32L452RETx_FLASH.ld")

ADD_SUBDIRECTORY(HAL)
ADD_SUBDIRECTORY(DRV)
ADD_SUBDIRECTORY(BSP)
ADD_SUBDIRECTORY(MCU)
ADD_SUBDIRECTORY(OS)
